# rust-wasm-seam-carving

./: .gitignore  .prettierignore  Cargo.toml  LICENSE  README.md  asset-manifest.json  config-overrides.js  craco.config.js  index.html  package.json  rust-toolchain.toml
.github/workflows/: deploy.yml  main.yml
public/: index.html
seam_carving/: .gitignore  Cargo.toml
seam_carving/src/: lib.rs
src/: carver.rs  entry.js  index.css  index.js  lib.js  lib.rs  main.js  resizer.js  style.css  worker.js
src/components/: Button.js  CanvasImage.js  Controls.js  DisplayImages.js  Header.js  ImageCanvas.js  ImageSelect.js
src/helpers/: cache.js  dom.js  unsplash.js
src/rs/: mod.rs  resizer.rs  seam_carver.rs
static/css/: 3.0766edf2.chunk.css  3.0766edf2.chunk.css.map  3.5db61eec.chunk.css  3.5db61eec.chunk.css.map  3.67192820.chunk.css  3.67192820.chunk.css.map  3.674c3de5.chunk.css  3.674c3de5.chunk.css.map  3.918992c9.chunk.css  3.918992c9.chunk.css.map  3.94ccce61.chunk.css  3.94ccce61.chunk.css.map  main.51146856.chunk.css  main.51146856.chunk.css.map  main.a3e51905.chunk.css  main.a3e51905.chunk.css.map
static/js/: 1.f808adb6.chunk.worker.js  1.f808adb6.chunk.worker.js.map  2.0baf7c89.chunk.js  2.0baf7c89.chunk.js.map  2.5f99e90e.chunk.js  2.5f99e90e.chunk.js.map  2.6b09685e.chunk.js  2.6b09685e.chunk.js.map  2.764361e2.chunk.js  2.764361e2.chunk.js.map  2.8a375093.chunk.js  2.8a375093.chunk.js.map  2.9080ed39.chunk.js  2.9080ed39.chunk.js.map  2.bbd15bf1.chunk.js  2.bbd15bf1.chunk.js.map  2.d2a0cfba.chunk.js  (+107 more)
tests/: fixture.rs  integration_tests.rs
(+4 files in other folders)
