[package]
name = "seam_carving"
version = "0.1.0"
authors = ["Yanglin Zhao <yz1876@gmail.com>"]
edition = "2018"

[lib]
name = "seam_carving"
crate-type = ["cdylib", "rlib"]

[dependencies]
js-sys = "0.3.64"
wasm-bindgen = "0.2.87"
image = "0.24.7"
console_error_panic_hook = "0.1.7"

[dependencies.web-sys]
version = "0.3.4"
features = [
  "console",
  'CanvasRenderingContext2d',
  'ImageData',
  'Document',
  'Element',
  'HtmlCanvasElement',
  'Window',
]
